RESOLVED FIXED16096
REGRESSION (r26653-r26699): Plaxo.com addressbook does not load in webkit nightlies.
https://bugs.webkit.org/show_bug.cgi?id=16096
Summary REGRESSION (r26653-r26699): Plaxo.com addressbook does not load in webkit nig...
Adam Williams
Reported 2007-11-22 18:41:14 PST
I tested in Deploying safari 3.0.4 with no problems. However under webkit nightly r27953 the tables and entire addressbook fields do not load at all. Instead only white space is visible.
Attachments
Screen Captures (317.01 KB, application/zip)
2007-11-23 05:08 PST, Adam Williams
no flags
Test case(s) (260 bytes, text/html)
2007-11-23 21:17 PST, David Kilzer (:ddkilzer)
no flags
further-reduced test case (31 bytes, text/html)
2007-11-26 10:36 PST, Darin Adler
no flags
patch (4.79 KB, patch)
2007-11-26 11:06 PST, Darin Adler
mitz: review+
Adam Williams
Comment 1 2007-11-22 18:42:32 PST
Note: A plaxo user account will be needed to test this bug.
Adam Williams
Comment 2 2007-11-23 05:08:15 PST
Created attachment 17458 [details] Screen Captures Screen captures of site behavior in Safari 3.0.4 with correct site behavior and same identical site with same user/password and url on webkit nightly r27953 showing site non functional
David Kilzer (:ddkilzer)
Comment 3 2007-11-23 06:58:52 PST
Regressions are P1.
David Kilzer (:ddkilzer)
Comment 4 2007-11-23 07:10:34 PST
I created a test account. U: webkit-test@hotmail.com P: [See Bug 5695 Comment #14]
David Kilzer (:ddkilzer)
Comment 5 2007-11-23 07:29:59 PST
Confirmed with a local debug build of r27971 with Safari 3.0.4 (523.12) on Mac OS X 10.4.11 (8S165). Works fine with the original WebKit for Safari 3.0.4. I see two errors printed in the JavaScript Console after clicking the Address Book link: SyntaxError: Invalid regular expression: internal error: code overflow http://s.plaxo.ws/webapps/desktop/js/po3.js?1195587456 Line: 6448 TypeError: Null value http://www.plaxo.com/po3/?module=ab&operation=viewFull&mode=normal Line: 1021 The first one is in the middle of a Dojo Toolkit source file. Searching for "isSafari" in the source reveals that they simply check for "Safari" in the "navigator.appVersion" field, so I don't think that this is a user-agent parsing issue.
David Kilzer (:ddkilzer)
Comment 6 2007-11-23 08:51:42 PST
The bisect-builds script says: Works: r26653 Fails: r26699
mitz
Comment 7 2007-11-23 16:38:49 PST
(In reply to comment #6) > The bisect-builds script says: > Works: r26653 Fails: r26699 > I see two errors printed in the JavaScript Console after clicking the Address > Book link: > > SyntaxError: Invalid regular expression: internal error: code overflow > http://s.plaxo.ws/webapps/desktop/js/po3.js?1195587456 > Line: 6448 <http://trac.webkit.org/projects/webkit/changeset/26697> is a PCRE update that falls in the above range.
David Kilzer (:ddkilzer)
Comment 8 2007-11-23 21:17:51 PST
Created attachment 17480 [details] Test case(s) Any one of the three regular expressions will cause the same error.
Darin Adler
Comment 9 2007-11-26 10:36:53 PST
Created attachment 17531 [details] further-reduced test case
Darin Adler
Comment 10 2007-11-26 11:06:15 PST
mitz
Comment 11 2007-11-26 11:10:02 PST
Comment on attachment 17533 [details] patch r=me
Darin Adler
Comment 12 2007-11-26 16:50:56 PST
Committed revision 28058.
Note You need to log in before you can comment on or make changes to this bug.