JavaScriptCore:

Reviewed by Mitz.

        - fix http://bugs.webkit.org/show_bug.cgi?id=16096
          REGRESSION (r26653-r26699): Plaxo.com addressbook does not load in webkit nightlies

        Test: fast/js/regexp-overflow.html

        * pcre/pcre_compile.cpp: (calculateCompiledPatternLengthAndFlags):
        Removed a stray "ptr++" that I added by accident when merging the
        changes between PCRE 6.4 and 6.5.

LayoutTests:

        Reviewed by Mitz.

        - test for http://bugs.webkit.org/show_bug.cgi?id=16096
          REGRESSION (r26653-r26699): Plaxo.com addressbook does not load in webkit nightlies

        * fast/js/regexp-overflow-expected.txt: Added.
        * fast/js/regexp-overflow.html: Added.
        * fast/js/resources/regexp-overflow.js: Added.



Canonical link: https://commits.webkit.org/21977@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@28058 268f45cc-cd09-0410-ab3c-d52691b4dbfc